--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
+    "mkcert": "^3.2.0",
     "popper.js": "^1.16.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.17.2",
     "web-vitals": "^2.1.4"
