--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dayjs": "^1.11.18",
     "jquery": "^3.7.1",
     "mkcert": "^3.2.0",
     "popper.js": "^1.16.1",
