--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "popper.js": "^1.16.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
