--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "datatables.net-bs5": "^2.3.4",
+    "datatables.net-buttons-bs5": "^3.2.5",
+    "datatables.net-searchbuilder-bs5": "^1.8.4",
+    "datatables.net-select-bs5": "^3.1.3",
     "dayjs": "^1.11.18",
     "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
     "mkcert": "^3.2.0",
+    "pdfmake": "^0.2.20",
     "popper.js": "^1.16.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
