--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.11.3",
     "datatables.net-bs5": "^2.3.4",
     "datatables.net-buttons-bs5": "^3.2.5",
+    "datatables.net-responsive-bs5": "^3.0.7",
     "datatables.net-searchbuilder-bs5": "^1.8.4",
     "datatables.net-select-bs5": "^3.1.3",
     "dayjs": "^1.11.18",
