--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "datatables.net-select-bs5": "^3.1.3",
     "dayjs": "^1.11.18",
     "jquery": "^3.7.1",
+    "jquery-blockui": "^2.7.0",
     "jszip": "^3.10.1",
     "mkcert": "^3.2.0",
     "pdfmake": "^0.2.20",
